added new storage structure